css/main.css
/* ... */
.footer .links {
  white-space: nowrap;
}
.footer .links a {
  color: #fff;
}
.footer .links a:hover {
  color: #1f2c38;
}

.api-endpoints {
  background: #fff;
  padding: 2px 5px;
  border-right: 1px solid #dadfe5;
  font-size: 9px;
  position: fixed;
  left: 0;
  top: 81px;
  bottom: 0;
  overflow-y: auto;
  display: none;
}

.api-endpoints .api-endpoints-list {
  padding: 0;
  margin-bottom: 0;
  list-style-type: none;
}

.api-endpoint {
}

.api-endpoint .api-header {
  margin-top: 10px;
}

.api-endpoint-code {
  padding-top: 15px;
}






































.api-doc {
  color: #f0f0f0;
}
.api-doc .editor-title {
  padding-left: 2px;
  font-weight: normal;
}
.api-doc .api-header {
  padding: 8px 13px;
  background-color: rgba(255, 255, 255, 0.16);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  font-size: 25px;
  margin-bottom: 0px;
  font-weight: 300;
  word-wrap: break-word;
}
.api-doc .api-description {
  padding: 16px;
  background-color: rgba(255, 255, 255, 0.3);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  font-size: 17px;
  font-weight: 300;
  word-wrap: break-word;
}
.api-doc .api-description pre {
  padding: 30px 0;
  margin: 10px auto;
  width: 550px;
  color: #ffffff;
  border: none;
  background-color: rgba(255, 255, 255, 0.10);

  position: relative;
  top: -2px;
  display: inline;
  padding: 4px 4px 2px 4px;
  border-radius: 3px;
  background-color: rgba(0, 0, 0, 0.2);
  white-space: nowrap;
}
.api-call-list-box {
  position: absolute;
  margin-top: 20px;
  display: none;
  padding-left: 0px;
  padding-right: 6px;
}
.api-call-list {
  margin-left: 10px;
  list-style-type: none;
  padding: 8px;
  border-radius: 5px;
  background-color: rgba(255, 255, 255, 0.16);
  font-weight: 400;
  font-size: 0.7em;
  float: left;
  width: 100%;
}
.api-call-list li a {
  color: #c6c6c6;
}
.api-call-list li a:hover {
  color: #fff;
  text-decoration: none;
}
.api-call-list .list-title {
  color: #fff;
  text-align: center;
  font-size: 1.1em;
}
a.anchor {
  position: relative;
  top: -50px;
  visibility: hidden;
  display: block;
}
a.anchor.api-anchor {
  top: -71px;
}
@media (max-width: 767px) {
  .promo .overview .summary li {
    font-size: 18px;
  }
  .promo .overview .summary {
    margin-left: 0;
  }
  .promo .overview {
    text-align: center;
  }
  .promo .overview .summary {
    margin-left: 0;
  }
  .promo .overview .summary li {
    text-align: left;
  }
  .promo .overview .download-area {
    margin: 0 auto;
  }
  .promo .overview .btn-group {
    padding-left: 10px;
    padding-right: 10px;
  }
  .promo .laptop .laptop-holder {
    -webkit-background-size: 300px auto;
    -moz-background-size: 300px auto;
    -o-background-size: 300px auto;
    background-size: 300px auto;
    height: 175px;
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
    padding-right: 0;
  }
  .promo .laptop .laptop-holder-inner {
    padding-top: 10px;
    width: 228px;
    height: 153px;
  }
  .promo .laptop .flexslider .flex-control-nav {
    padding-bottom: 4px;
  }
  .comparison .row .col p {
    padding: 8px 5px;
  }
  .comparison .row .col i {
    padding: 10px;
  }
  .footer .copyright {
    text-align: center;
    padding-top: 0;
  }
  .api-doc .api-header {
    font-size: 17px;
  }
  .api-endpoint-code {
    padding-top: 0;
  }
}
@media (min-width: 768px) {
  .promo .overview {
    text-align: center;
  }
  .promo .overview .summary {
    margin-left: 60px;
  }
  .promo .overview .summary li {
    text-align: left;
  }
  .promo .overview .download-area {
    margin: 0 auto;
  }
  .promo .overview .btn-group {
    padding-left: 10px;
    padding-right: 10px;
  }
  .footer .copyright {
    text-align: center;
    padding-top: 0;
  }
}
@media (min-width: 992px) {
  .promo .overview {
    text-align: left;
  }
  .promo .overview .summary {
    margin-left: 0;
  }
  .promo .overview .summary li {
    text-align: left;
  }
  .promo .overview .btn-group {
    padding-left: 0;
    padding-right: 20px;
  }
  .footer .copyright {
    text-align: right;
    padding-top: 23px;
  }
  .api-call-list-box {
    display: block;
  }
  .api-endpoints {
    display: block;
  }
}

@media (min-width: 800px) {
  .header .twitter-logo {
    display: block;
  }
  .navbar-collapse {
    margin-right: 50px;
  }
}
@media (min-width: 850px) {
  .navbar-collapse {
    margin-right: 25px;
  }
}
@media (min-width: 900px) {
  .navbar-collapse {
    margin-right: 0;
  }
}
@media (min-width: 992px) {
  .header .github-logo {
    display: block;
  }
  .navbar-collapse {
    margin-right: 140px;
  }
}
@media (min-width: 1050px) {
  .navbar-collapse {
    margin-right: 115px;
  }
  .api-endpoints {
    font-size: 10px;
  }
}
@media (min-width: 1100px) {
  .navbar-collapse {
    margin-right: 90px;
  }
}
@media (min-width: 1150px) {
  .navbar-collapse {
    margin-right: 65px;
  }
}
@media (min-width: 1200px) {
  .navbar-collapse {
    margin-right: 135px;
  }
  .api-endpoints {
    font-size: 11px;
  }
}
@media (min-width: 1250px) {
  .navbar-collapse {
    margin-right: 115px;
  }
}
@media (min-width: 1300px) {
  .navbar-collapse {
    margin-right: 95px;
  }
  .api-endpoints {
    font-size: 12px;
  }
}
@media (min-width: 1350px) {
  .navbar-collapse {
    margin-right: 65px;
  }
}
@media (min-width: 1400px) {
  .navbar-collapse {
    margin-right: 40px;
  }
}
@media (min-width: 1450px) {
  .navbar-collapse {
    margin-right: 20px;
  }
}
@media (min-width: 1500px) {
  .navbar-collapse {
    margin-right: 0;
  }
}



.features .features-title,
.screenshots .screenshots-title,
.documentation .documentation-title,
.faq .faq-title,
.api .api-title {
  margin: 0 auto;
  text-align: center;
  padding-bottom: 15px;
}
.features .features-title .title,
.screenshots .screenshots-title .title,
.documentation .documentation-title .title,
.faq .faq-title .title,
.api .api-title .title {
  color: #fff;
}
/* ... */

